-
Bug
-
Resolution: Done
-
P4: Low
-
5.3.1
-
None
-
fc16dcce9df51d4d65065f8f9a8b9525856cb5ae (dev, 6.8.2014, 5.4)
Hi,
I created a test case (see attachment).
To reproduce this bug, click on pushbutton in window it will show a QMenu with actions.
When you move on this QMenu and quickly move mouse outside this menu, in a QWindow we show the Tooltip in mouse position.
For me tooltip mustn't show outside QMenu as for each widget.
It's a bug that I was able to reproduce in qt 4.8.6 and qt 5.3.1.
I reproduce it in Windows and Linux.
For Gerrit Dashboard: QTBUG-40261 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
91504,4 | Restrict tooltips triggered by mouse move events to widget area. | dev | qt/qtbase | Status: MERGED | +2 | 0 |