Restrict tooltips triggered by mouse move events to widget area.

Tooltips may occur outside the widget area when it has mouse grab.

Task-number: QTBUG-40261
Change-Id: I68c1e28ad264fc5aaeb7d96273342f1d4bca8ce6
Reviewed-by: David Faure <david.faure@kdab.com>

cregit: fc16dcce9df51d4d65065f8f9a8b9525856cb5ae https://github.com/qt/qtbase/commit/fc16dcce9df51d4d65065f8f9a8b9525856cb5ae